--- a/package.json
+++ b/package.json
@@ -9,18 +9,17 @@
   "author": "felipe_moreno",
   "license": "ISC",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
+    " bcryptjs": "^2.4.3",
     "bootstrap": "^5.2.0",
-    "connect-flash": "^0.1.1",
-    "express": "^4.18.1",
-    "express-handlebars": "^6.0.6",
-    "express-mysql-session": "^2.1.8",
-    "express-session": "^1.17.3",
-    "morgan": "^1.10.0",
-    "mysql": "^2.18.1",
-    "passport": "^0.6.0",
-    "passport-local": "^1.0.0",
-    "timeago.js": "^4.0.2"
+    " connect-flash": "^0.1.1",
+    " express": "^4.18.1",
+    " express-handlebars": "^6.0.6",
+    " express-mysql-session": "^2.1.8",
+    " express-session": "^1.17.3",
+    " morgan": "^1.10.0",
+    " mysql": "^2.18.1",
+    " passport": "^0.6.0",
+    " passport-local": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
